Fixed ticketing page bugs
Ticketing dialog:
*fixed save DUNs bug
*fixed ticketing page layout bug

--- a/src/app/components/ticketing/ticketing.component.css
+++ b/src/app/components/ticketing/ticketing.component.css
@@ -14,7 +14,6 @@
 
 .example-container {
   height: 820px;
-  overflow: auto;
   background-color: #ffffff;
 }
 
